--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -25,11 +25,17 @@ jobs:
       
       - name: Create addon zip
         run: |
-          # Create a zip file of the addon
-          # Excludes .git and .github directories
-          zip -r MythicKeystoneReminder.zip . \
-            -x "*.git*" \
-            -x "*.github*"
+          # Create a temporary directory with the addon name
+          mkdir -p MythicKeystoneReminder
+          
+          # Copy all files except .git and .github to the temp directory
+          rsync -av --exclude='.git' --exclude='.github' --exclude='MythicKeystoneReminder' ./ MythicKeystoneReminder/
+          
+          # Create a zip file containing the folder
+          zip -r MythicKeystoneReminder.zip MythicKeystoneReminder/
+          
+          # Clean up temp directory
+          rm -rf MythicKeystoneReminder
       
       - name: Create Release
         uses: softprops/action-gh-release@v1
