--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -29,7 +29,7 @@ jobs:
           mkdir -p MythicKeystoneReminder
           
           # Copy all files except .git and .github to the temp directory
-          rsync -av --exclude='.git' --exclude='.github' --exclude='MythicKeystoneReminder' ./ MythicKeystoneReminder/
+          rsync -av --exclude='.git' --exclude='.github' --exclude='.gitignore' --exclude='MythicKeystoneReminder' ./ MythicKeystoneReminder/
           
           # Create a zip file containing the folder
           zip -r MythicKeystoneReminder.zip MythicKeystoneReminder/
